public/style/style.css
/* Author: Kevin Rothenbühler-Alarcon */

:root {
    --cardBackgroundColor: #f7f7f7;
    --cardTextInfoColor: rgba(0, 0, 0, 0.6);
    --headerBackgroundColor: rgb(209, 60, 60);
    --footerBackgroundColor: #ccc;
}

* {
    box-sizing: border-box;
}

body {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: flex-start;
    min-width: 100vw;
    min-height: 100vh;
    font-family: sans-serif;
}

header {
    display: flex;
    width: 100vw;
    height: 60px;
    background-color: var(--headerBackgroundColor);
}

#page-content {
    margin: 20px 10px;
    text-align: center;
    min-width: 350px;
}

.card {
    border: solid 1px #ccc;
    border-radius: 10px;
    padding: 20px;
    background-color: var(--cardBackgroundColor);
}

.card h2 {
    margin: 0;
}

.form-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: left;
}

.form-content a {
    margin-top: 10px;
}

.form-content input {
    width: 100%;
    border: 1px solid var(--footerBackgroundColor);
    height: auto;
    font-size: 16px;
    padding: 10px;
    margin-bottom: -1px;
}

.form-content input:focus {
    z-index: 100; /* Allow the focus border to be displayed on top of other elements */
}

.form-content input.top {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}

.form-content input.bottom {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    margin-bottom: 0;
}

.form-content button {
    margin-top: 20px;
    padding: 10px;
    height: auto;
    width: 100%;
    font-size: 18px;
    color: #fff;
    background-color: var(--headerBackgroundColor);
    border: 1px solid transparent;
    border-color: rgb(88, 18, 18);
    border-radius: 6px;
    cursor: pointer;
}

.error {
    color: red;
    font-weight: bold;
    margin-bottom: 10px;
}

div.info {
    color: var(--cardTextInfoColor);
    margin-top: 10px;
}

div.info ul {
    margin: 0;
    margin-top: 5px;
    padding: 0;
    list-style-type: none;
}

div.info li::before {
    content: "- ";
}

.main-footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--footerBackgroundColor);
    margin-top: auto;
    min-width: 350px;
    width: 100vw;
    height: 60px;
}

#todo-list-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
}

.todo-thumbnail {
    width: 280px;
    margin: 10px 0;
    cursor: pointer;
    transition: scale 0.3s;
}

.todo-thumbnail:hover {
    scale: 1.05;
}

.thumbnail-title {
    margin: 0;
}

.thumbnail-content {
    margin-top: 20px;
    text-align: left;
    color: var(--cardTextInfoColor);
}

@media only screen and (min-width: 800px) {
    #todo-list-content {
        flex-direction: row;
        justify-content: center;
    }

    .todo-thumbnail {
        margin: 10px;
    }
}

